eb-4385: fixed alignment of buttons

--- a/src/WebChannel/main/webapp/xpedx/css/theme/MIL.css
+++ b/src/WebChannel/main/webapp/xpedx/css/theme/MIL.css
@@ -5374,7 +5374,6 @@ input label {
 .mil-wrap-condensed-container {
 	float: none;
 	height: auto;
-	width: 940px;
 	padding: 0px 10px 10px 0px;
 	border-top: none;
 	border-left: 1px solid #cccccc;
@@ -6226,7 +6225,6 @@ BEGIN 2014 styles
 }
 
 .graybar {
-	width: 947px;
 	height: 25px;
 	background-color: #e9e9e9;
 	padding: 3px;
